Login refresh bug fix